--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scotchy-angular-ui",
   "version": "0.0.1",
   "license": "MIT",
+  "repository": "https://github.com/a951racer/Scotchy-Angular-UI.git",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
