--- a/package.json
+++ b/package.json
@@ -14,32 +14,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.4",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/cli": "^1.4.9",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "7.1.1",
+    "@angular/cdk": "^7.1.0",
+    "@angular/cli": "7.1.1",
+    "@angular/common": "7.1.1",
+    "@angular/compiler": "7.1.1",
+    "@angular/compiler-cli": "7.1.1",
+    "@angular/core": "7.1.1",
+    "@angular/forms": "7.1.1",
+    "@angular/http": "7.1.1",
+    "@angular/material": "^7.1.0",
+    "@angular/platform-browser": "7.1.1",
+    "@angular/platform-browser-dynamic": "7.1.1",
+    "@angular/router": "7.1.1",
     "core-js": "^2.4.1",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "path": "^0.12.7",
     "quill": "^1.3.2",
-    "rxjs": "^5.4.2",
-    "typescript": "~2.3.3",
-    "zone.js": "^0.8.14"
+    "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
+    "typescript": "3.1.6",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.9",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/language-service": "^4.2.4",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "7.1.1",
+    "@angular/compiler-cli": "7.1.1",
+    "@angular/language-service": "7.1.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -56,7 +58,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "3.1.6"
   },
   "engines": {
     "node": "10.11.0",
